--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AllOneAI Pro - Plataforma Profissional de IA</title>
+    <title>AllOneAI Ultra - Plataforma Profissional de IA</title>
     <style>
         :root {
             --primary: #6e48aa;
@@ -550,7 +550,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>AllOneAI Pro</h1>
+            <h1>AllOneAI Ultra</h1>
             <p class="subtitle">Plataforma profissional com todos os modelos de IA em um único lugar</p>
         </div>
     </header>
@@ -569,7 +569,7 @@
                 
                 <div class="chat-history" id="chat-history">
                     <div class="message ai-message">
-                        <div>Olá! Eu sou o AllOneAI Pro. Escolha um modelo no menu à direita e comece a conversar!</div>
+                        <div>Olá! Eu sou o AllOneAI Ultra. Escolha um modelo no menu à direita e comece a conversar!</div>
                         <div class="message-time">Agora</div>
                     </div>
                 </div>
